<resources>
    <string name="renitialiser_reseau">Rénitialiser le réseau</string>
    <string name="ajout_objets">Ajout d\'objets</string>
    <string name="ajout_connexions">Ajout de connexions</string>
    <string name="modif_objets">Modification d’objets/connexions</string>
    <string name="app_name">Réseau Mallouky/Pedrau</string>
    <string name="popup_title">Nom de l\'objet</string>
    <string name="popupNamePath_title">Nom de la connexion</string>
    <string name="annuler">Annuler</string>
    <string name="confirmer">Confirmer</string>
    <string name="choose_plan">Choisir un plan</string>
    <string name="popup_plan">Choisir un plan</string>
    <string name="import_image">Importer un plan</string>
    <string name="save_network">Sauvegarder le reseau</string>
    <string name="upload_network">Charger un reseau</string>
    <string name="share_mail">Envoyer par mail</string>
    <string name="popup_network_name">Nom du reseau</string>
    <string name="popup_network">Choisir un reseau</string>
    <string name="send_mail">Envoyer par mail</string>
    <string name="default_map">Plan</string>
    <string name="map_t2">Plan T2</string>
    <string name="map_t3">Plan T3</string>
    <string name="select_file_upload">Choisissez un fichier à télécharger</string>
    <string name="install_file_manager">Merci d\'installer un gestionnaire de fichier</string>
    <string name="choose_action">Choisir une action</string>
    <string name="delete_object_action">Supprimer l\'objet</string>
    <string name="modify_label_action">Modifier le nom</string>
    <string name="modify_color_action">Modifier la couleur</string>
    <string name="choose_icon_action">Choisir une icone</string>
    <string name="popup_choose_color">Choisissez une couleur</string>
    <string name="red">Rouge</string>
    <string name="green">Vert</string>
    <string name="blue">Bleu</string>
    <string name="orange">Orange</string>
    <string name="cyan">Cyan</string>
    <string name="magenta">Magenta</string>
    <string name="black">Noir</string>
    <string name="popup_choose_icon">Choisissez l\'icone</string>
    <string name="printer">Imprimante</string>
    <string name="television">Television</string>
    <string name="laptop">Ordinateur</string>
    <string name="delete_connection">Supprimer la connection</string>
    <string name="modify_connection_label">Modifier le nom de la connection</string>
    <string name="modify_connection_color">Modifier la couleur de la connection</string>
    <string name="modify_connection_width">Modifier l\'épaisseur de la connection</string>
    <string name="popup_connection_name">Nom de la connection</string>
    <string name="popup_connection_width">Choisir l\'épaisseur de la connection</string>
    <string name="thin">Fin</string>
    <string name="medium">Moyen</string>
    <string name="large">Large</string>
    <string name="curve_connections">Courber une connexion</string>
    <string name="upload_network_empty">Il n\'existe aucun enregistrement.</string>
    <string name="save_empty_network">Vous ne pouvez pas sauvegarder un reseau vide.</string>
</resources>